update as of 2021 01 15

--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
                 have
                 been able to resolve this issue easily, also we believe in this case, copyright law does not apply.
               </p>
-                Solely based on this, the action taken by Google (Suspension) was either too harsh or wrong altogether.
-                We believe copyright law doesn't apply in our case and that the complaint was not legitimate, however,
-                please
-                advise us if we need to send a DMCA counter-notification instead.
+              Solely based on this, the action taken by Google (Suspension) was either too harsh or wrong altogether.
+              We believe copyright law doesn't apply in our case and that the complaint was not legitimate, however,
+              please
+              advise us if we need to send a DMCA counter-notification instead.
             </div>
           </div>
         </details>
@@ -221,12 +221,12 @@
         </p>
       </li>
       <li>
-        <p><b>2021. 01. 03</b><br>
+        <p><b>2021. 01. 03.</b><br>
           A Filc csapata elindítja a Filc Napló közzétételi folyamatát Samsung Galaxy Store-ra és Huawei AppGallery-re.
         </p>
       </li>
       <li>
-        <p><b>2021. 01. 8.</b><br>
+        <p><b>2021. 01. 08.</b><br>
           Az (időközben publikált) Filc Napló is megkapja AppStore-on a Kréta eltávolítási kérelmét. Ahogy az
           Arisztokréta esetében, itt sem kerül azonnal eltávolításra az app.
         <details>
@@ -244,14 +244,20 @@
                 App Title: Filc Napló<br>
                 Apple ID: 1532030178<br>
               </p>
-                Comments: KRÉTA Szülőknek, KRÉTA Tanulóknak, KRÉTA Ellenőrző official eKRÉTA Applications use API keys
-                and UserAgent to indentify themselves for the servers as the official eKRÉTA application. This
-                alternative app use the same API keys and UserAgent as the official apps. Develepor has never asked us
-                to use our API-s.
+              Comments: KRÉTA Szülőknek, KRÉTA Tanulóknak, KRÉTA Ellenőrző official eKRÉTA Applications use API keys
+              and UserAgent to indentify themselves for the servers as the official eKRÉTA application. This
+              alternative app use the same API keys and UserAgent as the official apps. Develepor has never asked us
+              to use our API-s.
             </div>
           </div>
         </details>
         </p>
+      </li>
+      <li><b>Folyamatban: </b><i>Frissítve 2021. 01. 15.</i><br>
+        <ul>
+          <li>Filc Napló feltöltése F-Droid-ra, AppGallery-re és Galaxy Store-ra</li>
+          <li>Levelezés az Apple, a Filc csapat és a Kréta között az app eltávolításáról</li>
+        </ul>
       </li>
     </ul>
     </p>
@@ -324,7 +330,8 @@
     </p>
     <a name="mitfogtoktenni"></a>
     <h3>Mit fogtok tenni?</h3>
-    <h5>1. Email a KRÉTÁnak</h5>
+    <p><i>Frissítés 2021. 01. 15: Mostantól ebben a szakaszban a Filc Napló csapatának lépései szerepelnek.</i></p>
+    <h5>1. Email a KRÉTÁnak <b><i>Kész</i></b></h5>
     <p>
       <a name="kretalevel"></a>
     <details>
@@ -478,74 +485,71 @@
         Reméljük, hamarosan.
         <hr>
       </details>-->
-    <br>
-    Amíg nem kapunk valamilyen választ, vagy el nem telik 5 munkanap (lejár: Dec. 19,
-    szombat), további lépéseket nem teszünk.<br>
-    Tudjuk, hogy ha valóban érdemi választ szeretnének adni, akkor ahhoz egy
-    KRÉTA szintű, hatalmas cégnél sok idő kell, ezért ha több idő után válaszolnak, azt is ugyanúgy figyelembe
-    vesszük, most viszont a válaszlevelükig vagy 5 napig a várakozáson kívül mást nem fogunk csinálni.<br>
-    Ha válaszolnak a levelünkre, és abban nem kérnek arra, hogy ne tegyük azt közzé, akkor itt fogjuk közzétenni.<br>
-    Ha arra kérnek, hogy ne tegyük közzé, akkor is jelezni fogjuk, hogy mikor válaszoltak, és leírjuk a levelük
-    tartalmának lényegét.<br><br>
-    <i>A további lépések az esetleges válaszlevéltől függően valósulnak meg. A
-      következőkben leírtak arra az esetre vonatkoznak, ha a KRÉTÁtól nem
-      kapunk hivatalos választ.</i>
+    <i>(Frissítés: A Kréta nem válaszolt a levelünkre.)</i>
     </p>
-    <h5>2. A Google döntésének vitatása</h5>
-    <p>Bár a DMCA követelést a KRÉTA küldte, azt a Google dolgozta fel, és mivel jogosnak tartotta, teljesítette.<br>
-      Mi természetesen nem tartjuk jogosnak:<br>
-    <ul>
-      <li><b>A KRÉTA által kifogásolt dolgok nem szükségesek az appokhoz</b><br>
-        A DMCA kérelemben az API Key és a User Agent használatát kifogásolta a KRÉTA.<br>
-        Az API Key csak az iskolák listájának lekéréséhez szükséges, a Filc Napló esetében ezt saját szerverről
-        szolgátuk ki mindig is, ezt a változtatást az Arisztokréta esetében is könnyen be lehetne vezetni.<br>
-        Valóban mindkét app a KRÉTA app által is használt User Agenttel azonosította magát a KRÉTA szerverek előtt,
-        erre azonban rá voltunk kényszerítve, mert minden más User Agentet blokkolnak a KRÉTA szerverei. Ha ez
-        változik, mi is változtatunk.</li>
-      <li><b>Nem biztos, hogy vonatkozik erre a DMCA.</b><br>
-        Nem vagyunk jogászok, és nincs hozzáférésünk jogi tanácsadáshoz, de vitatható, hogy a DMCA, egy szerzői jogi
-        törvény vonatkozik-e egy random generált karaktersorra (API Key) és egy alkalmazáscsomag-azonosítóra
-        (UserAgent), azaz gyakorlatilag a KRÉTA app nevére.<br>
-        A jogosulatlan API használat felmerülhet (ezzel a fentebb részletezett okokból nem értünk egyet, de jogilag
-        sajnos helytáll), és a KRÉTA app Trademarkjának megsértése is (bár ez sem egészen így működik), de a DMCA
-        tudtunkkal ezekre a dolgokra nem vonatkozik.</li>
-      <li><b>Fair Use?</b><br>
-        Az amerikai szerzői jogi törvénnyel kapcsolatban sokszor van szó Fair Useról, azaz egy jogvédett alkotás olyan
-        módon való felhasználásáról, ami nem tiltott.<br>
-        Ebben sem vagyunk szakértők, de ennek elvei alapján igaz, hogy:<br>
-        Az alkalmazásaink nem akadályozzák az eredetit a piacának elérésében (az nem piacon dolgozik);<br>
-        Nem akadályozzák bevételszerzésben (az nem szerez közvetlenül bevételt a működésével);<br>
-        Nem nyújtanak jogosulatlanul nagyobb hozzáférést a rendszerhez, mint a hivatalos appok.</li>
-      <li><b>Döntés enyhítése?</b><br>
-        A Google Playen egy, a Google elveit sértő appot kétféleképpen büntethetnek:<br>
-        Eltávolíthatják, ami azt jelenti, hogy az appot nem lehet megtalálni a keresőben, de ha a fejlesztő javítja a
-        kifogásolt elemet (ahogy azt mi is meg tudnánk tenni), az app különösebb probléma nélkül visszakerülhet az
-        áruházba, még akkor is ha eredetileg tényleg fennállt a probléma.<br>
-        A súlyosabb döntés, amiben mi is részesültünk, a felfüggesztés. Talán kevésbé hangzik durvának, de ez az a
-        boltból való eltávolításon túl azzal is jár, hogy a régi appot már soha többé nem lehet frissíteni, az
-        értékelések és a felhasználók elvesznek, hacsak be nem sikerül bizonyítani hogy eredetileg sem állt fenn a
-        probléma.<br>
-        Sajnos mi ezt aligha tudjuk bebizonyítani, de talán kereshetünk utat a döntés enyhítésére, hogy az csak
-        eltávolítás legyen, ne felfüggesztés.</li>
-    </ul>
+    <h5>2. A Google döntésének vitatása <b><i>Kész</i></b></h5>
+    <details>
+      <summary><b>Korábbi érveink</b></summary>
+      <p>Bár a DMCA követelést a KRÉTA küldte, azt a Google dolgozta fel, és mivel jogosnak tartotta, teljesítette.<br>
+        Mi természetesen nem tartjuk jogosnak:<br>
+      <ul>
+        <li><b>A KRÉTA által kifogásolt dolgok nem szükségesek az appokhoz</b><br>
+          A DMCA kérelemben az API Key és a User Agent használatát kifogásolta a KRÉTA.<br>
+          Az API Key csak az iskolák listájának lekéréséhez szükséges, a Filc Napló esetében ezt saját szerverről
+          szolgátuk ki mindig is, ezt a változtatást az Arisztokréta esetében is könnyen be lehetne vezetni.<br>
+          Valóban mindkét app a KRÉTA app által is használt User Agenttel azonosította magát a KRÉTA szerverek előtt,
+          erre azonban rá voltunk kényszerítve, mert minden más User Agentet blokkolnak a KRÉTA szerverei. Ha ez
+          változik, mi is változtatunk.</li>
+        <li><b>Nem biztos, hogy vonatkozik erre a DMCA.</b><br>
+          Nem vagyunk jogászok, és nincs hozzáférésünk jogi tanácsadáshoz, de vitatható, hogy a DMCA, egy szerzői jogi
+          törvény vonatkozik-e egy random generált karaktersorra (API Key) és egy alkalmazáscsomag-azonosítóra
+          (UserAgent), azaz gyakorlatilag a KRÉTA app nevére.<br>
+          A jogosulatlan API használat felmerülhet (ezzel a fentebb részletezett okokból nem értünk egyet, de jogilag
+          sajnos helytáll), és a KRÉTA app Trademarkjának megsértése is (bár ez sem egészen így működik), de a DMCA
+          tudtunkkal ezekre a dolgokra nem vonatkozik.</li>
+        <li><b>Fair Use?</b><br>
+          Az amerikai szerzői jogi törvénnyel kapcsolatban sokszor van szó Fair Useról, azaz egy jogvédett alkotás olyan
+          módon való felhasználásáról, ami nem tiltott.<br>
+          Ebben sem vagyunk szakértők, de ennek elvei alapján igaz, hogy:<br>
+          Az alkalmazásaink nem akadályozzák az eredetit a piacának elérésében (az nem piacon dolgozik);<br>
+          Nem akadályozzák bevételszerzésben (az nem szerez közvetlenül bevételt a működésével);<br>
+          Nem nyújtanak jogosulatlanul nagyobb hozzáférést a rendszerhez, mint a hivatalos appok.</li>
+        <li><b>Döntés enyhítése?</b><br>
+          A Google Playen egy, a Google elveit sértő appot kétféleképpen büntethetnek:<br>
+          Eltávolíthatják, ami azt jelenti, hogy az appot nem lehet megtalálni a keresőben, de ha a fejlesztő javítja a
+          kifogásolt elemet (ahogy azt mi is meg tudnánk tenni), az app különösebb probléma nélkül visszakerülhet az
+          áruházba, még akkor is ha eredetileg tényleg fennállt a probléma.<br>
+          A súlyosabb döntés, amiben mi is részesültünk, a felfüggesztés. Talán kevésbé hangzik durvának, de ez az a
+          boltból való eltávolításon túl azzal is jár, hogy a régi appot már soha többé nem lehet frissíteni, az
+          értékelések és a felhasználók elvesznek, hacsak be nem sikerül bizonyítani hogy eredetileg sem állt fenn a
+          probléma.<br>
+          Sajnos mi ezt aligha tudjuk bebizonyítani, de talán kereshetünk utat a döntés enyhítésére, hogy az csak
+          eltávolítás legyen, ne felfüggesztés.</li>
+      </ul>
+    </details>
+    <i>(Frissítés: A Google elutasította a kérelmünket. Részletek fentebb.)</i>
     </p>
-    <h5>3. Appok ismételt közzététele</h5>
+    <h5>3. Az app ismételt közzététele</h5>
+    <p>Sajnos a Kréta a Filc AppStore-os letiltásával bizonyította, hogy az akció nem egyszeri dolog volt, hanem
+      (legalábbis egyelőre) minden újabb próbálkozás tiltással fog találkozni. Ennek fényében:</p>
     <ul>
-      <li>Ha a KRÉTA válaszol, annak szellemében járunk el.</li>
-      <li> Valószínűleg azonban nem fognak válaszolni, az idő lejárta után
-        megpróbáljuk az appokat újra közzétenni a Play áruházban.</li>
-      <li>Ha innen az
-        appokat újra eltávolíttatják, akkor akár feltölthetjük őket
-        márkaspecifikus boltokba (pl. Galaxy Store, AppGallery), és továbbra is
-        elérhetők maradnak GitHubon keresztül.</li>
-      <li>Az appokba automatikus
-        frissítési figyelmeztetést építünk.</li>
+      <li>Google Playen nem fogjuk újra közzétenni az appot, mert az a fejlesztői fiók törlésével járhatna.</li>
+      <li>Apple AppStore-ban az eddigiek alapján úgy tűnik, fenn fog maradni az app, az Apple jobban védi a fejlesztőit
+        (valamit érjen is az az évi $100, amit ezúton is köszönünk támogatóinknak).</li>
+      <li>Közzétesszük a Filcet Samsung Galaxy Store-on és Huawei AppGallery-n. Ezzel a felhasználók nagyrészét újra
+        könnyen elérhetjük, de mivel kisebb áruházak, van rá esély, hogy a Kréta innen nem távolíttatja el őket. Az
+        engedélyeztetés folyamatban van, hetek kérdése a közzététel.</li>
+      <li>Közzétesszük a Filcet F-Droidon. Az F-Droid egy külső alkalmazásáruház, ha ezen keresztül telepítitek majd a
+        Filcet, meg tudjuk oldani az automatikus frissítéseket bármilyen androidos telefonon. Részletes útmutatót fogunk
+        közzétenni, ha elérhető lett az app.</li>
+      <li>A Filc a várva várt 2.1-es frissítéssel egy főoldali hírlevelet is kap, ahol az új verziókról és egyéb fontos
+        Filces hírekről is tudunk majd benneteket tájékoztatni.</li>
     </ul>
-    <h5>4. Közösség bevonása</h5>
+    <h5>4. A közösség bevonása</h5>
     <p>
-      Kiadunk majd egy posztot Redditen az r/hungary-n, ami röviden
-      összefoglalja a helyzetet. Ha akkor is úgy tűnik, hogy ez jó ötlet lenne,
-      talán a sajtót is bevontjuk. Kérünk, addig ne tegyétek.
+      Kiadtunk egy posztot Redditen az r/hungary-n, ami röviden
+      összefoglalja a helyzetet. Bár ezzel némi nyilvánosságot szereztünk, nem hozott átütő eredményt.<br>A sajtó
+      bevonását egyelőre nem tartjuk célravezetőnek.
     </p>
     <a href="#top">FEL</a>
 
