'how to install' and apple dmca dispute

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>DMCA | Play letiltás</title>
+  <title>DMCA | Kréta kliens appok letiltása</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
@@ -44,6 +44,7 @@
     <h4>Tartalom</h4>
     <p>
     <ul>
+      <li><a href="#telepites">Hogyan telepíthetem az appokat?</a></li>
       <li><a href="#mitortent">Mi történt?</a></li>
       <li><a href="#miertfontos">Miért fontos ez?</a></li>
       <li><a href="#mitfogtoktenni">Mit fogtok tenni?</li></a>
@@ -52,6 +53,39 @@
     </ul>
     </p>
     <hr>
+    <a name="telepites">
+      <h3>Hogyan telepíthetem az appokat Androidon?</h3>
+    </a>
+    <p>Apple eszközökre az AppStore-on keresztül <a title="Arisztokréta AppStore" href="https://apps.apple.com/us/app/arisztokr%C3%A9ta-e-napl%C3%B3/id1502626784">mindkét</a> <a title="Filc Napló AppStore" href="https://apps.apple.com/al/app/filc-napl%C3%B3/id1532030178">app</a> továbbra is elérhető.</p>
+    <h5>Filc Napló</h5>
+    <p>Az app napokon belül elérhetővé válik a Samsung Galaxy Store-on, Huawei AppGallery-n. Ha ilyen márkájú telefonod
+      van, nem kell majd a frissítést manuálisan végezned.<br>
+      Közzé fogjuk tenni az appot F-Droid-on is, ami egy külső alkalmazásáruház, tele nyílt forráskódú, közösségi
+      fejlesztésű alkalmazásokkal. Ha nincs Huawei vagy Samsung telefonod, feltelepítheted az F-Droidot, és azon
+      keresztül automatikusan frissül majd az appod.</p>
+    <p>Ha nem szeretnél ilyesmit, <a href="https://filcnaplo.hu/downloads">weboldalunkon</a> keresztül továbbra is
+      letölthetsz egy egyszerű .apk fájlt. Az alkalmazáson belül hírt fogsz kapni, ha új verzió válik elérhetővé.</p>
+    <h5>Arisztokréta</h5>
+    <p>Az Arisztokréta app legfrissebb verzióját .apk formájában az <a
+        href="https://github.com/Coware-Apps/ellenorzo/releases">Arisztokréta GitHub oldalán</a> találod. Az app
+      automatikusan nem fog frissülni, neked
+      kell figyelned a GitHub oldalt új verziókért.</p>
+    <h5>Hogyan telepíthetek .apk fájlokat a telefonomra?</h5>
+    <p>Az Android rendszerű telefonokon az alkalmazások telepítése .apk fájlokkal lehetséges. Ezeket normál esetben a
+      Google Play áruházon keresztül kapja a telefon, de manuális telepítésre is van lehetőség.<br>
+      Fontos azonban meggyőződnöd az alkalmazás biztonságáról, mielőtt manuálisan feltelepíted! Az Arisztokréta és Filc
+      Napló manuális telepítése biztonságos, ha a hivatalos oldalainkról töltötted le a fájlt.</p>
+    <p>
+      <p><b>Lépések:</b></p>
+    <ul>
+      <li>Indítsd el a letöltést egy megbízható oldalon található linken keresztül.</li>
+      <li>Mielőtt elindul a letöltés, a Google Chrome figyelmeztet, hogy .apk fájlt töltesz le. Okézd le az ablakot.</li>
+      <li>A letöltés elkészültét az értesítéseid között fogod látni. Ha elkészült, kattints az értesítésre a megnyitáshoz.</li>
+      <li>A megjelenő telepítőképernyőn figyelmeztetést fogsz látni, hogy nem engedélyezett a Chromeból származó külső alkalmazások telepítése. A megjelenő gombbal lépj a beállítások oldalra, és kapcsold be a Google Chromeot, mint engedélyezett külső forrást.</li>
+      <li>Próbáld újra a telepítést, ezúttal, ha minden jól megy, sikerülni fog. Az így telepített appok sokszor nem kerülnek ki automatikusan a főoldaladra, az alkalmazáslistában fogod megtalálni az ikont.</li>
+    </ul>
+    <h6>Ha elakadtál, szívesen segít az <a href="https://discord.gg/k3e2pqC">Arisztokréta</a> vagy a <a href="https://filcnaplo.hu/discord">Filc Napló</a> Discordos közössége.</h6>
+    </p>
     <a name="mitortent">
       <h3>Mi történt?</h3>
     </a>
@@ -253,14 +287,43 @@
         </details>
         </p>
       </li>
-      <li><b>Folyamatban: </b><i>Frissítve 2021. 01. 15.</i><br>
+      <li>
+        <p><b>2021. 01. 20.</b><br>
+          Reagálunk az AppStore DMCA letiltási kérelemre:
+        <details>
+          <summary><b>A Krétának és Apple-nek küldött levelünk</b></summary>
+          <div class="card mt-2">
+            <div class="card-body">
+              <p>Dear eKRÉTA Informatikai Zrt. and Mécsei Dániel!</p>
+              <p>
+                We believe that your copyright infringement claim about our app, Filc Napló, is a result of a
+                misunderstanding:</p>
+              <p>
+                To our knowledge, US copyright law does not cover API usage.<br>
+                Our app does not use your API key, it never sends it to your servers, nor does our app's source code
+                contain it.<br>
+                Contrary to what you wrote, we have sent you many emails in the past. Unfortunately, we did not hear
+                back from you. However, at your help center, you acknowledge 3rd party apps using your systems, and you
+                don't forbid using your API.</p>
+              <p>
+                Keeping these points in mind, we ask Apple Support, who received a copy of this email, to lift the claim
+                you made.</p>
+
+              Regards,<br>
+              Developers of Filc Napló
+            </div>
+          </div>
+        </details>
+        </p>
+      </li>
+      <li><b>Folyamatban: </b><i>Frissítve 2021. 01. 20.</i><br>
         <ul>
           <li>Filc Napló feltöltése F-Droid-ra, AppGallery-re és Galaxy Store-ra</li>
-          <li>Levelezés az Apple, a Filc csapat és a Kréta között az app eltávolításáról</li>
         </ul>
       </li>
     </ul>
     </p>
+  <a href="#top">FEL</a>
 
     <a name="miertfontos"></a>
     <h3>Miért fontos ez?</h3>
