push that ad a little bit more.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <a name="telepites">
       <h3>Hogyan telepíthetem az appokat Androidon?</h3>
     </a>
-    <p>Apple eszközökre az AppStore-on keresztül <a title="Arisztokréta AppStore" href="https://apps.apple.com/us/app/arisztokr%C3%A9ta-e-napl%C3%B3/id1502626784">mindkét</a> <a title="Filc Napló AppStore" href="https://apps.apple.com/al/app/filc-napl%C3%B3/id1532030178">app</a> továbbra is elérhető.</p>
+    <p><h6>Ha elakadtál, szívesen segít a <a href="https://filcnaplo.hu/discord">Filc Napló</a> vagy az <a href="https://discord.gg/k3e2pqC">Arisztokréta</a> Discordos közössége.</h6></p>
     <h5>Filc Napló</h5>
     <p>Az app napokon belül elérhetővé válik a Samsung Galaxy Store-on, Huawei AppGallery-n. Ha ilyen márkájú telefonod
       van, nem kell majd a frissítést manuálisan végezned.<br>
@@ -84,8 +84,8 @@
       <li>A megjelenő telepítőképernyőn figyelmeztetést fogsz látni, hogy nem engedélyezett a Chromeból származó külső alkalmazások telepítése. A megjelenő gombbal lépj a beállítások oldalra, és kapcsold be a Google Chromeot, mint engedélyezett külső forrást.</li>
       <li>Próbáld újra a telepítést, ezúttal, ha minden jól megy, sikerülni fog. Az így telepített appok sokszor nem kerülnek ki automatikusan a főoldaladra, az alkalmazáslistában fogod megtalálni az ikont.</li>
     </ul>
-    <h6>Ha elakadtál, szívesen segít az <a href="https://discord.gg/k3e2pqC">Arisztokréta</a> vagy a <a href="https://filcnaplo.hu/discord">Filc Napló</a> Discordos közössége.</h6>
     </p>
+    <p>Apple eszközökre az AppStore-on keresztül <a title="Arisztokréta AppStore" href="https://apps.apple.com/us/app/arisztokr%C3%A9ta-e-napl%C3%B3/id1502626784">mindkét</a> <a title="Filc Napló AppStore" href="https://apps.apple.com/al/app/filc-napl%C3%B3/id1532030178">app</a> továbbra is elérhető.</p>
     <a name="mitortent">
       <h3>Mi történt?</h3>
     </a>
