--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
     <p>
       <p><b>Lépések:</b></p>
     <ul>
-      <li>Indítsd el a letöltést egy megbízható oldalon található linken keresztül.</li>
+      <li>Ha fel volt telepítve a Filc Napló vagy az Arisztokréta korábban a Playen keresztül a telefonodra, mindenekelőtt töröld le.</li>
+      <li>Indítsd el az .apk fájl letöltését egy megbízható oldalon található linken keresztül.</li>
       <li>Mielőtt elindul a letöltés, a Google Chrome figyelmeztet, hogy .apk fájlt töltesz le. Okézd le az ablakot.</li>
       <li>A letöltés elkészültét az értesítéseid között fogod látni. Ha elkészült, kattints az értesítésre a megnyitáshoz.</li>
       <li>A megjelenő telepítőképernyőn figyelmeztetést fogsz látni, hogy nem engedélyezett a Chromeból származó külső alkalmazások telepítése. A megjelenő gombbal lépj a beállítások oldalra, és kapcsold be a Google Chromeot, mint engedélyezett külső forrást.</li>
