--- a/index.html
+++ b/index.html
@@ -54,22 +54,26 @@
     </p>
     <hr>
     <a name="telepites">
-      <h3>Hogyan telepíthetem az appokat Androidon?</h3>
+      <h3>Hogyan telepíthetem az appokat?</h3>
     </a>
     <p><h6>Ha elakadtál, szívesen segít a <a href="https://filcnaplo.hu/discord">Filc Napló</a> vagy az <a href="https://discord.gg/k3e2pqC">Arisztokréta</a> Discordos közössége.</h6></p>
     <h5>Filc Napló</h5>
-    <p>Az app napokon belül elérhetővé válik a Samsung Galaxy Store-on, Huawei AppGallery-n. Ha ilyen márkájú telefonod
-      van, nem kell majd a frissítést manuálisan végezned.<br>
-      Közzé fogjuk tenni az appot F-Droid-on is, ami egy külső alkalmazásáruház, tele nyílt forráskódú, közösségi
+    <ul>
+    <li>Huawei telefonokra AppGalleryn: <a href="https://appgallery.huawei.com/#/app/C103606821">Letöltés</a></li>
+    <li>iOS-re AppStoreból: <a href="https://apps.apple.com/us/app/filc-napl%C3%B3/id1532030178">Letöltés</a></li>
+    <li>Apk fájl minden telefonra: <a href="https://filcnaplo.hu/downloads">Letöltés</a> • A telepítéshez segítséget a következő bekezdésben találsz.</li>
+    <li>Samsung telefonokra Galaxy Storeból: <i>Hamarosan...</i></li>
+    <li>F-Droid letöltés automatikus frissítéshez: <i>Hamarosan...</i></li>
+  </ul>
+    <p>Az F-Droid egy külső alkalmazásáruház, tele nyílt forráskódú, közösségi
       fejlesztésű alkalmazásokkal. Ha nincs Huawei vagy Samsung telefonod, feltelepítheted az F-Droidot, és azon
       keresztül automatikusan frissül majd az appod.</p>
-    <p>Ha nem szeretnél ilyesmit, <a href="https://filcnaplo.hu/downloads">weboldalunkon</a> keresztül továbbra is
-      letölthetsz egy egyszerű .apk fájlt. Az alkalmazáson belül hírt fogsz kapni, ha új verzió válik elérhetővé.</p>
     <h5>Arisztokréta</h5>
-    <p>Az Arisztokréta app legfrissebb verzióját .apk formájában az <a
-        href="https://github.com/Coware-Apps/ellenorzo/releases">Arisztokréta GitHub oldalán</a> találod. Az app
-      automatikusan nem fog frissülni, neked
-      kell figyelned a GitHub oldalt új verziókért.</p>
+    <ul>
+      <li>iOS-re AppStoreból: <a href="https://apps.apple.com/us/app/arisztokr%C3%A9ta-e-napl%C3%B3/id1502626784">Letöltés</a></li>
+      <li>Apk fájl minden telefonra: <a
+        href="https://github.com/Coware-Apps/ellenorzo/releases">Letöltés</a></li>
+    </ul>
     <h5>Hogyan telepíthetek .apk fájlokat a telefonomra?</h5>
     <p>Az Android rendszerű telefonokon az alkalmazások telepítése .apk fájlokkal lehetséges. Ezeket normál esetben a
       Google Play áruházon keresztül kapja a telefon, de manuális telepítésre is van lehetőség.<br>
@@ -86,7 +90,6 @@
       <li>Próbáld újra a telepítést, ezúttal, ha minden jól megy, sikerülni fog. Az így telepített appok sokszor nem kerülnek ki automatikusan a főoldaladra, az alkalmazáslistában fogod megtalálni az ikont.</li>
     </ul>
     </p>
-    <p>Apple eszközökre az AppStore-on keresztül <a title="Arisztokréta AppStore" href="https://apps.apple.com/us/app/arisztokr%C3%A9ta-e-napl%C3%B3/id1502626784">mindkét</a> <a title="Filc Napló AppStore" href="https://apps.apple.com/al/app/filc-napl%C3%B3/id1532030178">app</a> továbbra is elérhető.</p>
     <a name="mitortent">
       <h3>Mi történt?</h3>
     </a>
@@ -317,9 +320,10 @@
         </details>
         </p>
       </li>
-      <li><b>Folyamatban: </b><i>Frissítve 2021. 01. 20.</i><br>
+      <li><b>Folyamatban: </b><i>Frissítve 2021. 01. 26.</i><br>
         <ul>
-          <li>Filc Napló feltöltése F-Droid-ra, AppGallery-re és Galaxy Store-ra</li>
+          <li>Filc Napló feltöltése F-Droid-ra és Galaxy Store-ra</li>
+          <li>Levelezés a Filc fejlesztők, a Kréta és az Apple között az AppStore-os eltávolításról</li>
         </ul>
       </li>
     </ul>
@@ -600,20 +604,19 @@
       <li>Google Playen nem fogjuk újra közzétenni az appot, mert az a fejlesztői fiók törlésével járhatna.</li>
       <li>Apple AppStore-ban az eddigiek alapján úgy tűnik, fenn fog maradni az app, az Apple jobban védi a fejlesztőit
         (valamit érjen is az az évi $100, amit ezúton is köszönünk támogatóinknak).</li>
-      <li>Közzétesszük a Filcet Samsung Galaxy Store-on és Huawei AppGallery-n. Ezzel a felhasználók nagyrészét újra
-        könnyen elérhetjük, de mivel kisebb áruházak, van rá esély, hogy a Kréta innen nem távolíttatja el őket. Az
-        engedélyeztetés folyamatban van, hetek kérdése a közzététel.</li>
+      <li>Közzétesszük a Filcet Samsung Galaxy Store-on (hamarosan) és Huawei AppGallery-n (kész). Ezzel a felhasználók nagyrészét újra
+        könnyen elérhetjük, de mivel kisebb áruházak, van rá esély, hogy a Kréta innen nem távolíttatja el őket.</li>
       <li>Közzétesszük a Filcet F-Droidon. Az F-Droid egy külső alkalmazásáruház, ha ezen keresztül telepítitek majd a
         Filcet, meg tudjuk oldani az automatikus frissítéseket bármilyen androidos telefonon. Részletes útmutatót fogunk
         közzétenni, ha elérhető lett az app.</li>
-      <li>A Filc a várva várt 2.1-es frissítéssel egy főoldali hírlevelet is kap, ahol az új verziókról és egyéb fontos
+      <li>A Filc a 2.1-es frissítéssel egy főoldali hírlevelet is kapott, ahol az új verziókról és egyéb fontos
         Filces hírekről is tudunk majd benneteket tájékoztatni.</li>
     </ul>
     <h5>4. A közösség bevonása</h5>
     <p>
       Kiadtunk egy posztot Redditen az r/hungary-n, ami röviden
-      összefoglalja a helyzetet. Bár ezzel némi nyilvánosságot szereztünk, nem hozott átütő eredményt.<br>A sajtó
-      bevonását egyelőre nem tartjuk célravezetőnek.
+      összefoglalja a helyzetet. Bár ezzel némi nyilvánosságot szereztünk, nem hozott átütő eredményt.<br>
+      <b>Ha újságíró vagy, cikked közzététele előtt kérünk, lépj velünk kapcsolatba <a href="https://filcnaplo.hu/discord">Discordon</a> vagy emailben.</b>
     </p>
     <a href="#top">FEL</a>
 
