--- a/index.html
+++ b/index.html
@@ -56,23 +56,27 @@
     <a name="telepites">
       <h3>Hogyan telepíthetem az appokat?</h3>
     </a>
-    <p><h6>Ha elakadtál, szívesen segít a <a href="https://filcnaplo.hu/discord">Filc Napló</a> vagy az <a href="https://discord.gg/k3e2pqC">Arisztokréta</a> Discordos közössége.</h6></p>
+    <p>
+    <h6>Ha elakadtál, szívesen segít a <a href="https://filcnaplo.hu/discord">Filc Napló</a> vagy az <a
+        href="https://discord.gg/k3e2pqC">Arisztokréta</a> Discordos közössége.</h6>
+    </p>
     <h5>Filc Napló</h5>
     <ul>
-    <li>Huawei telefonokra AppGalleryn: <a href="https://appgallery.huawei.com/#/app/C103606821">Letöltés</a></li>
-    <li>iOS-re AppStoreból: <a href="https://apps.apple.com/us/app/filc-napl%C3%B3/id1532030178">Letöltés</a></li>
-    <li>Apk fájl minden telefonra: <a href="https://filcnaplo.hu/downloads">Letöltés</a> • A telepítéshez segítséget a következő bekezdésben találsz.</li>
-    <li>Samsung telefonokra Galaxy Storeból: <i>Hamarosan...</i></li>
-    <li>F-Droid letöltés automatikus frissítéshez: <i>Hamarosan...</i></li>
-  </ul>
+      <li>Huawei telefonokra AppGalleryn: <a href="https://appgallery.huawei.com/#/app/C103606821">Letöltés</a></li>
+      <li>iOS-re AppStoreból: <a href="https://apps.apple.com/us/app/filc-napl%C3%B3/id1532030178">Letöltés</a></li>
+      <li>Apk fájl minden telefonra: <a href="https://filcnaplo.hu/downloads">Letöltés</a> • A telepítéshez segítséget a
+        következő bekezdésben találsz.</li>
+      <li>Samsung telefonokra Galaxy Storeból: <i>Hamarosan...</i></li>
+      <li>F-Droid letöltés automatikus frissítéshez: <i>Hamarosan...</i></li>
+    </ul>
     <p>Az F-Droid egy külső alkalmazásáruház, tele nyílt forráskódú, közösségi
       fejlesztésű alkalmazásokkal. Ha nincs Huawei vagy Samsung telefonod, feltelepítheted az F-Droidot, és azon
       keresztül automatikusan frissül majd az appod.</p>
     <h5>Arisztokréta</h5>
     <ul>
-      <li>iOS-re AppStoreból: <a href="https://apps.apple.com/us/app/arisztokr%C3%A9ta-e-napl%C3%B3/id1502626784">Letöltés</a></li>
-      <li>Apk fájl minden telefonra: <a
-        href="https://github.com/Coware-Apps/ellenorzo/releases">Letöltés</a></li>
+      <li>iOS-re AppStoreból: <a
+          href="https://apps.apple.com/us/app/arisztokr%C3%A9ta-e-napl%C3%B3/id1502626784">Letöltés</a></li>
+      <li>Apk fájl minden telefonra: <a href="https://github.com/Coware-Apps/ellenorzo/releases">Letöltés</a></li>
     </ul>
     <h5>Hogyan telepíthetek .apk fájlokat a telefonomra?</h5>
     <p>Az Android rendszerű telefonokon az alkalmazások telepítése .apk fájlokkal lehetséges. Ezeket normál esetben a
@@ -80,14 +84,20 @@
       Fontos azonban meggyőződnöd az alkalmazás biztonságáról, mielőtt manuálisan feltelepíted! Az Arisztokréta és Filc
       Napló manuális telepítése biztonságos, ha a hivatalos oldalainkról töltötted le a fájlt.</p>
     <p>
-      <p><b>Lépések:</b></p>
+    <p><b>Lépések:</b></p>
     <ul>
-      <li>Ha fel volt telepítve a Filc Napló vagy az Arisztokréta korábban a Playen keresztül a telefonodra, mindenekelőtt töröld le.</li>
+      <li>Ha fel volt telepítve a Filc Napló vagy az Arisztokréta korábban a Playen keresztül a telefonodra,
+        mindenekelőtt töröld le.</li>
       <li>Indítsd el az .apk fájl letöltését egy megbízható oldalon található linken keresztül.</li>
-      <li>Mielőtt elindul a letöltés, a Google Chrome figyelmeztet, hogy .apk fájlt töltesz le. Okézd le az ablakot.</li>
-      <li>A letöltés elkészültét az értesítéseid között fogod látni. Ha elkészült, kattints az értesítésre a megnyitáshoz.</li>
-      <li>A megjelenő telepítőképernyőn figyelmeztetést fogsz látni, hogy nem engedélyezett a Chromeból származó külső alkalmazások telepítése. A megjelenő gombbal lépj a beállítások oldalra, és kapcsold be a Google Chromeot, mint engedélyezett külső forrást.</li>
-      <li>Próbáld újra a telepítést, ezúttal, ha minden jól megy, sikerülni fog. Az így telepített appok sokszor nem kerülnek ki automatikusan a főoldaladra, az alkalmazáslistában fogod megtalálni az ikont.</li>
+      <li>Mielőtt elindul a letöltés, a Google Chrome figyelmeztet, hogy .apk fájlt töltesz le. Okézd le az ablakot.
+      </li>
+      <li>A letöltés elkészültét az értesítéseid között fogod látni. Ha elkészült, kattints az értesítésre a
+        megnyitáshoz.</li>
+      <li>A megjelenő telepítőképernyőn figyelmeztetést fogsz látni, hogy nem engedélyezett a Chromeból származó külső
+        alkalmazások telepítése. A megjelenő gombbal lépj a beállítások oldalra, és kapcsold be a Google Chromeot, mint
+        engedélyezett külső forrást.</li>
+      <li>Próbáld újra a telepítést, ezúttal, ha minden jól megy, sikerülni fog. Az így telepített appok sokszor nem
+        kerülnek ki automatikusan a főoldaladra, az alkalmazáslistában fogod megtalálni az ikont.</li>
     </ul>
     </p>
     <a name="mitortent">
@@ -298,7 +308,7 @@
           <summary><b>A Krétának és Apple-nek küldött levelünk</b></summary>
           <div class="card mt-2">
             <div class="card-body">
-              <p>Dear eKRÉTA Informatikai Zrt. and Mécsei Dániel!</p>
+              <p>Dear eKRÉTA Informatikai Zrt. and [privát]!</p>
               <p>
                 We believe that your copyright infringement claim about our app, Filc Napló, is a result of a
                 misunderstanding:</p>
@@ -320,6 +330,57 @@
         </details>
         </p>
       </li>
+      <a name="friss"></a> <!--!MOVEME-->
+      <li>
+        <p><b>2021. 01. 25.</b><br>
+          Legnagyobb meglepetésünkre a Kréta válaszol a levelünkre. Pontosan nem idézhetjük a válasz szövegét, a
+          tartalma röviden:<br>
+          Leírták, hogy a Kréta API nem nyílt, és a Kréta nem adott engedélyt senkinek, hogy használja. A személyes
+          használatot még tolerálnák, de az alkalmazásboltokba való nyilvános publikálást nem tudják elfogadni. Ahogyan
+          azt sem, hogy ezek az alkalmazások a Kréta API kulcsát, User Agentjét és client ID-ját használják.<br>
+          Ezzel viszont effektíve elismerték (bár konkrétan nem írták le), hogy nem a bejelentésük nem az eredetileg
+          megjelölt copyrighttal kapcsolatos.</p>
+        <p>
+        <details>
+          <summary><b>Válaszunk a Krétának</b></summary>
+          <div class="card mt-2">
+            <div class="card-body">
+              <p>Dear eKRÉTA Informatikai Zrt. and [privát]!</p>
+              <p>
+                Thank you for replying!<br>
+                This is the first time you replied to our emails, and we hope this conversation will continue.
+              </p>
+              <p>
+                We removed your User-Agent from our application, and we’d like to apologize for including it in the
+                first place. As of our latest update, we’re using our own User-Agent. Unfortunately, we are not able to
+                use a different client ID other than yours without your cooperation.
+              </p>
+              <p>
+                A perfect example of a statewide system like yours and open source third parties unfolded at our Polish
+                friends: A similar system to eKRÉTA called UONET+ has a thriving community of third-party apps.
+                (For example VULCAN: https://github.com/wulkanowy/wulkanowy)
+              </p>
+              <p>
+                Our app intends to extend the KRÉTA functionality with features only those can develop, who are in the
+                schools themselves and deeply understand what is important for the students.<br>
+                This shouldn’t be a competition between the official app and third parties.
+              </p>
+              <p>
+                We agree that third-party apps using your client ID is not acceptable. We ask for your cooperation in
+                providing a common, public client ID for us and all the other third-party clients. By providing a public
+                client ID for third-party apps and with everyone using their own User-Agents you will remain in full
+                control of your systems.
+              </p>
+              <p>
+                We look forward to hearing from you.
+              </p>
+              Regards,
+              Developers of Filc Napló
+            </div>
+          </div>
+        </details>
+        </p>
+      </li>
       <li><b>Folyamatban: </b><i>Frissítve 2021. 01. 26.</i><br>
         <ul>
           <li>Filc Napló feltöltése F-Droid-ra és Galaxy Store-ra</li>
@@ -328,7 +389,9 @@
       </li>
     </ul>
     </p>
-  <a href="#top">FEL</a>
+    <a href="#top">FEL</a>
+
+    <!--!DATE LIST OVER ################################################-->
 
     <a name="miertfontos"></a>
     <h3>Miért fontos ez?</h3>
@@ -604,7 +667,8 @@
       <li>Google Playen nem fogjuk újra közzétenni az appot, mert az a fejlesztői fiók törlésével járhatna.</li>
       <li>Apple AppStore-ban az eddigiek alapján úgy tűnik, fenn fog maradni az app, az Apple jobban védi a fejlesztőit
         (valamit érjen is az az évi $100, amit ezúton is köszönünk támogatóinknak).</li>
-      <li>Közzétesszük a Filcet Samsung Galaxy Store-on (hamarosan) és Huawei AppGallery-n (kész). Ezzel a felhasználók nagyrészét újra
+      <li>Közzétesszük a Filcet Samsung Galaxy Store-on (hamarosan) és Huawei AppGallery-n (kész). Ezzel a felhasználók
+        nagyrészét újra
         könnyen elérhetjük, de mivel kisebb áruházak, van rá esély, hogy a Kréta innen nem távolíttatja el őket.</li>
       <li>Közzétesszük a Filcet F-Droidon. Az F-Droid egy külső alkalmazásáruház, ha ezen keresztül telepítitek majd a
         Filcet, meg tudjuk oldani az automatikus frissítéseket bármilyen androidos telefonon. Részletes útmutatót fogunk
@@ -616,7 +680,8 @@
     <p>
       Kiadtunk egy posztot Redditen az r/hungary-n, ami röviden
       összefoglalja a helyzetet. Bár ezzel némi nyilvánosságot szereztünk, nem hozott átütő eredményt.<br>
-      <b>Ha újságíró vagy, cikked közzététele előtt kérünk, lépj velünk kapcsolatba <a href="https://filcnaplo.hu/discord">Discordon</a> vagy emailben.</b>
+      <b>Ha újságíró vagy, cikked közzététele előtt kérünk, lépj velünk kapcsolatba <a
+          href="https://filcnaplo.hu/discord">Discordon</a> vagy emailben.</b>
     </p>
     <a href="#top">FEL</a>
 
