--- a/index.html
+++ b/index.html
@@ -336,9 +336,9 @@
           Legnagyobb meglepetésünkre a Kréta válaszol a levelünkre. Pontosan nem idézhetjük a válasz szövegét, a
           tartalma röviden:<br>
           Leírták, hogy a Kréta API nem nyílt, és a Kréta nem adott engedélyt senkinek, hogy használja. A személyes
-          használatot még tolerálnák, de az alkalmazásboltokba való nyilvános publikálást nem tudják elfogadni. Ahogyan
+          használatot még tolerálnák, de az alkalmazásboltokban való nyilvános publikálást nem tudják elfogadni. Ahogyan
           azt sem, hogy ezek az alkalmazások a Kréta API kulcsát, User Agentjét és client ID-ját használják.<br>
-          Ezzel viszont effektíve elismerték (bár konkrétan nem írták le), hogy nem a bejelentésük nem az eredetileg
+          Ezzel viszont effektíve elismerték (bár konkrétan nem írták le), hogy a bejelentésük nem az eredetileg
           megjelölt copyrighttal kapcsolatos.</p>
         <p>
         <details>
