--- a/index.html
+++ b/index.html
@@ -62,12 +62,22 @@
     </p>
     <h5>Filc Napló</h5>
     <ul>
-      <li>Huawei telefonokra AppGalleryn: <a href="https://appgallery.huawei.com/#/app/C103606821">Letöltés</a></li>
-      <li>iOS-re AppStoreból: <a href="https://apps.apple.com/us/app/filc-napl%C3%B3/id1532030178">Letöltés</a></li>
-      <li>Apk fájl minden telefonra: <a href="https://filcnaplo.hu/downloads">Letöltés</a> • A telepítéshez segítséget a
-        következő bekezdésben találsz.</li>
-      <li>Samsung telefonokra Galaxy Storeból: <i>Hamarosan...</i></li>
-      <li>F-Droid letöltés automatikus frissítéshez: <i>Hamarosan...</i></li>
+      <li><b>Samsung</b> telefonokra Galaxy Storeból: <a
+        href="https://apps.samsung.com/appquery/appDetail.as?appId=hu.filcnaplo.ellenorzo">Letöltés</a></li>
+      <li><b>Huawei</b> telefonokra AppGalleryn: <a href="https://appgallery.huawei.com/#/app/C103606821">Letöltés</a></li>
+      <li><b>Apple</b> eszközökre AppStoreból: <a href="https://apps.apple.com/us/app/filc-napl%C3%B3/id1532030178">Letöltés</a></li>
+      <li><b>Apk fájl</b> minden telefonra: <a href="https://filcnaplo.hu/downloads">Letöltés</a> • <a href="#apkhelp">Segítség</a></li>
+      <li>
+        <details>
+          <summary><b>F-Droid</b> letöltés automatikus frissítéshez <i>Haladó</i></summary>
+          <ul>
+            <li>1. F-Droid <a href="https://f-droid.org/F-Droid.apk">letöltése</a> és telepítése • <a href="#apkhelp">Segítség apk fájl telepítésében</a></li>
+            <li>2. Filc repó hozzáadása (így fog megjelenni az app az áruházban):<br><a href="https://filcnaplo.hu/fdroid/repo/">Kattints ide</a> a hozzáadáshoz, okézd le az ablakot, majd várd meg amíg befrissül a tartalom.<br>Mostmár rákereshetsz a Filcre, vagy:</li>
+            <li>3. Filc Napló letöltése <a href="https://f-droid.org/packages/hu.filcnaplo.ellenorzo">Közvetlen link</a> <i>(Csak a repó hozzáadása után működik!)</i></li>
+          </ul>
+          </p>
+        </details>
+      </li>
     </ul>
     <p>Az F-Droid egy külső alkalmazásáruház, tele nyílt forráskódú, közösségi
       fejlesztésű alkalmazásokkal. Ha nincs Huawei vagy Samsung telefonod, feltelepítheted az F-Droidot, és azon
@@ -78,7 +88,8 @@
           href="https://apps.apple.com/us/app/arisztokr%C3%A9ta-e-napl%C3%B3/id1502626784">Letöltés</a></li>
       <li>Apk fájl minden telefonra: <a href="https://github.com/Coware-Apps/ellenorzo/releases">Letöltés</a></li>
     </ul>
-    <h5>Hogyan telepíthetek .apk fájlokat a telefonomra?</h5>
+    <a name="apkhelp">
+    <h5>Hogyan telepíthetek .apk fájlokat a telefonomra?</h5></a>
     <p>Az Android rendszerű telefonokon az alkalmazások telepítése .apk fájlokkal lehetséges. Ezeket normál esetben a
       Google Play áruházon keresztül kapja a telefon, de manuális telepítésre is van lehetőség.<br>
       Fontos azonban meggyőződnöd az alkalmazás biztonságáról, mielőtt manuálisan feltelepíted! Az Arisztokréta és Filc
@@ -330,7 +341,8 @@
         </details>
         </p>
       </li>
-      <a name="friss"></a> <!--!MOVEME-->
+      <a name="friss"></a>
+      <!--!MOVEME-->
       <li>
         <p><b>2021. 01. 25.</b><br>
           Legnagyobb meglepetésünkre a Kréta válaszol a levelünkre. Pontosan nem idézhetjük a válasz szövegét, a
@@ -381,9 +393,8 @@
         </details>
         </p>
       </li>
-      <li><b>Folyamatban: </b><i>Frissítve 2021. 01. 26.</i><br>
+      <li><b>Folyamatban: </b><i>Frissítve 2021. 02. 04.</i><br>
         <ul>
-          <li>Filc Napló feltöltése F-Droid-ra és Galaxy Store-ra</li>
           <li>Levelezés a Filc fejlesztők, a Kréta és az Apple között az AppStore-os eltávolításról</li>
         </ul>
       </li>
